fix player align

--- a/frontEnd/src/Components/ui/ModulesScreen/styles.module.scss
+++ b/frontEnd/src/Components/ui/ModulesScreen/styles.module.scss
@@ -58,6 +58,10 @@
     font-size: 3rem;
     z-index: 40;
 
+    svg {
+      margin-left: 2rem;
+    }
+
     // :hover {
     //   filter: brightness(60%);
     // }
